crates/toml/tests/snapshots/invalid/datetime/no-t.stderr
TOML parse error at line 2, column 8
  |
2 | no-t = 1987-07-0517:45:00Z
  |        ^^^^^^^^^^^^^^^^^^^
invalid date, expected a two-digit day (DD)
